# simple_date_time

./: .gitignore  CMakeLists.txt  LICENSE  README.md  date_time.c  sTime.h  simple_date_time.componentinfo.xml  simple_date_time.cppproj
Debug/: Makefile  sTime.d
Release/: Makefile  date_time.d  makedep.mk  sTime.d
build-chain/: CMakeLists.txt
doc/: README.md
src/: CMakeLists.txt  date_time.h  mcuClock.c  mcuClock.h  mcu_time.c  mcu_time.h  sTime.c  sTime.h  time.c  time.h
src/simple-time/: mcu_clock.c  mcu_clock.h  mcu_time.c  mcu_time.h
src/simpleTime/: mcuClock.c  mcu_clock.h  mcu_time.c  simpleTime.c  simpleTime.h
test/: CMakeLists.txt  mcu_time_test.c  mcu_time_test.h  simpleTime_test.c  simpleTime_test.h  time_test.c  time_test.h
